# generative_agents

./: pyproject.toml
environment/frontend_server/temp_storage/: curr_sim_code.json
reverie/: global_methods.py
reverie/backend_server/: Isabella Rodriguez-persona.txt  model_server.py  reverie.py
reverie/backend_server/console_logs/: ChatGPT_request-prompts.txt  GPT_request-complete-output.txt  GPT_request-prompts.txt  Gemma_request-complete-output.txt  Isabella Rodriguez hourly schedule-2.txt  Isabella Rodriguez hourly schedule.txt  Isabella Rodriguez-persona.txt  Klaus Mueller hourly schedule-2.txt  Klaus Mueller hourly schedule.txt  Klaus Mueller-persona.txt  Llama_request-complete-output.txt  Maria Lopez hourly schedule-2.txt  Maria Lopez hourly schedule.txt  Maria Lopez-persona.txt  function_call_log.txt  generate_act_obj_desc - Isabella Rodriguez  generate_act_obj_desc - Klaus Mueller  generate_act_obj_desc - Maria Lopez  gpt_responses.txt  output.txt  prompts.txt  prompts_simple.txt
reverie/backend_server/llms/llama/: llama_chat.py
reverie/backend_server/persona/cognitive_modules/: plan.py
reverie/backend_server/persona/prompt_template/: #llm_structure.py#  defunct_run_gpt_prompt.py  gpt_structure.py  print_prompt.py  run_gpt_prompt.py  run_llm_prompt.py
reverie/backend_server/persona/prompt_template/LLM/: #llm_structure.py#  LocalLLM.py  llm_structure.py  run_llm_prompt.py
reverie/fastapi_server/: app.py  make_request.py  setup_server.sh
reverie/llm_server/: model_server.py  start_llm_server.sh
(+7 files in other folders)
